# debayanray.github.io

./: .gitignore  README.md  index.html  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/pdf_source/: conf.py  experiences.rst  index.rst
doc/source/: conf.py  index.rst  index.rst.old
doc/source/_templates/: layout.html.notused
doc/source/experiences/: index.rst
