[metadata]
name = debayanray-profile
summary = Debayan Ray Profile
description-file =
    README.md
license = Copyright 2020 Debayan Ray
author = Debayan Ray
home-page = https://github.com/debayanray/debayanray.github.io
classifier =
    Development Status :: Initial draft
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: Copyright 2020 Debayan Ray.
    Operating System :: OS Independent
    Programming Language :: Python

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
